--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
       }
     ],
     "require": {
-      "kalnoy/nestedset": "^4.3"
+      "inetstudio/admin-panel": "^6.0",
+      "kalnoy/nestedset": "^5.0"
     },
     "autoload": {
       "psr-4": {
